--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <tr>
                 <td class="square-cell"><div class="cell-content">SCIENCES FONDAMENTALES</div></td>
                 <td class="square-cell"><div class="cell-content">BIOMATERIAUX</div></td>
-                <td class="square-cell"><a href="http://localhost:8000/les%20principales%20affections%20buccalesmodifie_modifie.html" class="cell-content link" style="font-weight: bold;">MOCO</a></td>
+                <td class="square-cell"><a href="/les%20principales%20affections%20buccalesmodifie_modifie.html" class="cell-content link" style="font-weight: bold;">MOCO</a></td>
             </tr>
             <tr>
                 <td class="square-cell"><div class="cell-content">OCE</div></td>
