--- a/les principales affections buccalesmodifie_modifie.html
+++ b/les principales affections buccalesmodifie_modifie.html
@@ -135,7 +135,7 @@
             background-color: #4a4a4f;
         }
 </style>
-<link href="Les principales affections buccales.CSS" rel="stylesheet"/></head>
+<link href="/CSS/Les principales affections buccales.CSS" rel="stylesheet"/></head>
 <body>
 <div id="main-area">
 <div id="main-content">
