--- a/Tableau.html
+++ b/Tableau.html
@@ -32,7 +32,7 @@
 
       // Charger les données JSON depuis l'URL
       $.ajax({
-        url: 'http://localhost:8000/MyArray.json',
+        url: '/data/MyArray.json',
         dataType: 'json',
         success: function(tableauJSON) {
           // Rechercher les lignes correspondantes dans le tableau JSON
