--- a/les principales affections buccalesmodifie_modifie.html
+++ b/les principales affections buccalesmodifie_modifie.html
@@ -48,7 +48,7 @@
             text-align: center;
         }
         #svg-container{
-            width: 100%;
+            width: auto%;
             overflow-x: scroll;
             min-width: 0px;
             margin: 0 10px;
