Update les principales affections buccalesmodifie_modifie.html

--- a/les principales affections buccalesmodifie_modifie.html
+++ b/les principales affections buccalesmodifie_modifie.html
@@ -139,7 +139,7 @@
 <body>
 <div id="main-area">
 <div id="main-content">
-<div id="svg-container"><svg ed:hspacing="30" ed:name="Page-1" ed:vspacing="30" height="1780" id="page0" preserveaspectradio="xMinYMin meet" viewbox="0 0 2932 1780" width="2932" xmlns="http://www.w3.org/2000/svg" xmlns:ed="https://www.edrawsoft.com/xml/2017/SVGExtensions/" xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
+<div id="svg-container"><svg ed:hspacing="30" ed:name="Page-1" ed:vspacing="30" height="1780" id="page0" preserveaspectradio="xMinYMin meet" viewbox="0 0 2932 1780" width="auto" xmlns="http://www.w3.org/2000/svg" xmlns:ed="https://www.edrawsoft.com/xml/2017/SVGExtensions/" xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
 <style type="text/css"><![CDATA[
 g[ed\:togtopicid],g[ed\:hyperlink],g[ed\:comment],g[ed\:note] {cursor:pointer;}
 g[id] {-moz-user-select: none;-ms-user-select: none;user-select: none;}
