Update les principales affections buccalesmodifie_modifie.html

--- a/les principales affections buccalesmodifie_modifie.html
+++ b/les principales affections buccalesmodifie_modifie.html
@@ -49,14 +49,15 @@
             overflow-y: auto;
             text-align: center;
         }
-        #svg-container{
-            width: auto%;
-            overflow-x: scroll;
-            min-width: 0px;
-            margin: 0 10px;
-            overflow: visible;
-            position: relative;
-        }
+#svg-container {
+    width: 100vw;
+    height: 100vh;
+    overflow-x: scroll;
+    min-width: 0px;
+    margin: 0 10px;
+    overflow: visible;
+    position: relative;
+}
         #nav-thumbs{
             overflow-y: scroll;
             padding: 0 5px;
