Update les principales affections buccalesmodifie_modifie.html

--- a/les principales affections buccalesmodifie_modifie.html
+++ b/les principales affections buccalesmodifie_modifie.html
@@ -10,6 +10,7 @@
             margin: 0;
                 width: auto;
                 height : auto;
+                background-color: #191919;
         }
         #content-info{
             width: auto;
