--- a/index.html
+++ b/index.html
@@ -142,5 +142,24 @@
             </tr>
         </table>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+    $(".square-cell:contains('SCIENCES FONDAMENTALES')").click(function(){
+        $("#table-container td").animate({
+            opacity: 0
+        }, 1000, function() {
+            $(".square-cell div").each(function(index) {
+                // change the content of each cell
+                $(this).text("New content " + (index + 1));
+            });
+            // expand and reveal new content
+            $("#table-container td").animate({
+                opacity: 1
+            }, 1000);
+        });
+    });
+});
+</script>
 </body>
 </html>
