--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <title>Dr Sanna</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <style>
         .link {
             text-decoration: none;
@@ -126,7 +127,7 @@
     <div id="table-container">
         <table>
             <tr>
-                <td class="square-cell"><div class="cell-content">SCIENCES FONDAMENTALES</div></td>
+                <td class="square-cell"><div class="cell-content"><i class="fas fa-arrow-left" style="display: none;"></i>SCIENCES FONDAMENTALES</div></td>
                 <td class="square-cell"><div class="cell-content">BIOMATERIAUX</div></td>
                 <td class="square-cell"><a href="/les%20principales%20affections%20buccalesmodifie_modifie.html" class="cell-content link" style="font-weight: bold;">MOCO</a></td>
             </tr>
@@ -163,6 +164,8 @@ $(document).ready(function(){
                 });
             });
             newTextAdded = true;
+            // Afficher l'icône de flèche
+            $(".cell-content:contains('SCIENCES FONDAMENTALES') i").show();
         } else if ($(this).is(":contains('SCIENCES FONDAMENTALES')")) {
             $(".cell-content").each(function(index){
                 $(this).fadeOut("fast", function(){
@@ -171,10 +174,11 @@ $(document).ready(function(){
                 });
             });
             newTextAdded = false;
+            // Cacher l'icône de flèche
+            $(".cell-content:contains('SCIENCES FONDAMENTALES') i").hide();
         }
     });
 });
 </script>
-
 </body>
 </html>
