--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ $(document).ready(function(){
             });
             newTextAdded = true;
             // Afficher l'icône de flèche
-            $(".arrow-icon").css("display", "inline");
+            $("#first-cell .arrow-icon").css("display", "inline");
             // Cacher le texte dans la première cellule
             $("#first-cell .content-text").hide();
         } 
