--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <title>Dr Sanna</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
+        #loader {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+        }
         html, body {
             height: 100%;
             margin: 0;
@@ -127,6 +139,9 @@
     </style>
 </head>
 <body>
+        <div id="loader">
+        <i class="fa-solid fa-tooth fa-bounce"></i>
+    </div>
     <div id="title-container">
         <table>
             <tr>
@@ -232,6 +247,9 @@
               });
             }
           });
+        });
+                $(window).on("load", function() {
+            $("#loader").fadeOut("slow");
         });
     </script>
 </body>
