--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <title>Dr Sanna</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        #loader {
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-        }
+       #loader {
+  transition: all 0.3s ease-out;
+  opacity: 1;
+  visibility: visible;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background: #fff;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#loader.fadeOut {
+  opacity: 0;
+  visibility: hidden;
+}
+
         html, body {
             height: 100%;
             margin: 0;
@@ -140,7 +147,7 @@
 </head>
 <body>
         <div id="loader">
-        <i class="fa-solid fa-tooth fa-bounce"></i>
+       <img src="https://i.giphy.com/media/Rk3PlFCDTXAKBjWUvR/giphy.webp" alt="Loading...">
     </div>
     <div id="title-container">
         <table>
@@ -248,9 +255,9 @@
             }
           });
         });
-                $(window).on("load", function() {
-            $("#loader").fadeOut("slow");
-        });
+$(window).on("load", function() {
+  $("#loader").addClass("fadeOut");
+});
     </script>
 </body>
 </html>
