--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         }).text(cellDataItem.text);
                         // Empty the cell and append the link
                         cellContentElement.empty().append(link);
-                      } else if (cellDataItem === 'fa-arrow-left') {
+                      } else if (cellDataItem === '/images/arrow-left-solid.svg') {
                         // Create new icon element
                         const icon = $('<img>').attr('src', '/images/arrow-left-solid.svg').addClass('arrow-left-icon');
                         // Empty the cell and append the icon
