--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         .cell-content a:hover {
             background-color: transparent;
         }
-
         .arrow-left-icon {
-            font-size: 1em;
+              width: 8em; /* Ajustez la largeur de l'image selon vos besoins */
+  height: 8em; 
         }
     </style>
 </head>
