--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            background-color: darkgray;
+            background-color: dimgray;
         }
 
         #title-container {
