--- a/MOCO/lesions-buccales.html
+++ b/MOCO/lesions-buccales.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="right">
-            <iframe src="tableau.html"></iframe>
+            <iframe src="/MOCO/tableau.html"></iframe>
         </div>
     </div>
 </body>
