--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <title>Dr Sanna</title>
+    <link rel="preload" href="/icones/arrow-left-solid.svg" as="image">
     <style>
        #loader {
   transition: all 0.3s ease-out;
