--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             align-items: center;
             justify-content: center;
             padding: 20px;
-            background-color: darkgray;
+            background-color: dimgray;
             color: white;
         }
 
@@ -56,7 +56,7 @@
             justify-content: center;
             overflow: hidden;
             padding: 20px;
-            background-color: darkgray;
+            background-color: dimgray;
         }
 
         table {
