--- a/index.html
+++ b/index.html
@@ -151,9 +151,11 @@
     </div>
     <div id="title-container">
         <table>
-            <tr>
-                <td style="height: 33.33%; background-color: darkgray;"><div class="cell-content">Dr Sanna</div></td>
-            </tr>
+        <tr>
+            <td style="height: 33.33%; background-color: darkgray;">
+                <div id="dr-sanna-cell" class="cell-content">Dr Sanna</div>
+            </td>
+        </tr>
             <tr>
                 <td style="height: 66.67%; background-color: lightgray;"><div class="cell-content"></div></td>
             </tr>
